thumbnail: Don't crash if the thumbnailer could not be setup

script_exec_new() can fail in certain cases, and we should not crash
when trying to expand the script command later if the initial setup
failed.

https://bugzilla.gnome.org/show_bug.cgi?id=785963